[gd_scene load_steps=10 format=3 uid="uid://bti610xcgtmrs"]

[ext_resource type="Script" path="res://assets/Scripts/Ui/DisplayNodes/Combat/que_collection_control.gd" id="1_5admy"]
[ext_resource type="Script" path="res://assets/Scripts/Ui/DisplayNodes/Combat/que_mini_display_container.gd" id="1_orr8s"]
[ext_resource type="Texture2D" uid="uid://io35wpu802fp" path="res://assets/Sprites/UI/BackPatches/Patch_64_12.png" id="2_gyjv3"]
[ext_resource type="Texture2D" uid="uid://cg1yo6bhpalea" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_page_slot.png" id="3_18vdn"]
[ext_resource type="Texture2D" uid="uid://1brfy81pji75" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_page_gap_slot.png" id="4_a03qy"]
[ext_resource type="Script" path="res://assets/Scripts/Ui/DisplayNodes/Combat/que_mini_slot_icon.gd" id="4_rqluc"]
[ext_resource type="Texture2D" uid="uid://bdn528i15d122" path="res://data/Actions/Attack/TestSword.png" id="6_4ce4u"]
[ext_resource type="Texture2D" uid="uid://b4rsuuvrkee14" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_dead_slot.png" id="8_5pd0m"]
[ext_resource type="Texture2D" uid="uid://seyoqmlx4o78" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_page_slot_highlight.png" id="8_xp1pv"]

[node name="QueCollectionDisplayControl" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_5admy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="QueMiniDisplayContainer" type="Container" parent="VBoxContainer" node_paths=PackedStringArray("background", "inner_container")]
custom_minimum_size = Vector2(88, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_orr8s")
background = NodePath("Background")
inner_container = NodePath("BoxContainer")

[node name="Background" type="NinePatchRect" parent="VBoxContainer/QueMiniDisplayContainer"]
custom_minimum_size = Vector2(88, 48)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_gyjv3")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8

[node name="Control" type="Control" parent="VBoxContainer/QueMiniDisplayContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/QueMiniDisplayContainer/Control"]
custom_minimum_size = Vector2(2, 40)
layout_mode = 2
offset_left = 44.0
offset_top = 4.0
offset_right = 46.0
offset_bottom = 44.0
color = Color(1, 0, 0, 1)

[node name="BoxContainer" type="BoxContainer" parent="VBoxContainer/QueMiniDisplayContainer"]
layout_mode = 2

[node name="PortraitTextureRect" type="TextureRect" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="PageSlotPrefab" type="Control" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
script = ExtResource("4_rqluc")

[node name="PageSlot" type="TextureRect" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer/PageSlotPrefab"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
size_flags_vertical = 4
texture = ExtResource("3_18vdn")

[node name="GapTextureRect" type="TextureRect" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer/PageSlotPrefab"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_a03qy")

[node name="Icon" type="TextureRect" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer/PageSlotPrefab"]
visible = false
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4ce4u")
stretch_mode = 3

[node name="DeadIcon" type="TextureRect" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer/PageSlotPrefab"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("8_5pd0m")

[node name="Highlight" type="TextureRect" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer/PageSlotPrefab"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("8_xp1pv")

[node name="SlotsContainer" type="HBoxContainer" parent="VBoxContainer/QueMiniDisplayContainer/BoxContainer"]
layout_mode = 2
